# Workmate_cats

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml  run_django.sh
backend/api/: urls.py
backend/backend/: settings.py  urls.py
backend/cats/: admin.py  apps.py  filters.py  models.py  schemas.py  serializers.py  views.py
backend/cats/management/commands/: add_breed.py  add_cat.py  add_group.py  cat_db.py
backend/cats/migrations/: 0001_initial.py  0002_alter_cat_age.py  0002_alter_cat_breed.py  0002_alter_cat_color.py  0002_initial.py  0003_alter_cat_age.py  0004_alter_cat_age.py
backend/core/: permissions.py  validators.py
backend/core/constants/: users.py
backend/data/: breed.json  cat.json  group.json  user.json
backend/tests/: test_models.py
backend/users/: admin.py  manager.py  models.py  schemas.py  serializers.py  views.py
backend/users/management/commands/: add_user.py
backend/users/migrations/: 0001_initial.py
infra/: nginx.conf
